--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-beautifulsoup4==4.8.2
-click==7.0
-cssutils==1.0.2
-numpy==1.24.4
-lxml==4.9.1
-pandas==1.5.3
-requests==2.31.0
-tqdm==4.42.1
-pathos==0.2.9
-urllib3==1.26.7
+beautifulsoup4>=4.8.2
+click>=7.0
+cssutils>=1.0.2
+numpy>=1.24.4
+lxml>=4.9.1
+pandas>=1.5.3
+requests>=2.31.0
+tqdm>=4.42.1
+pathos>=0.2.9
+urllib3>=1.26.7
+fastapi>=0.104.1
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+jinja2>=3.1.2
+aiofiles>=23.2.1
+python-dotenv>=1.0.0
