--- a/config_template.json
+++ b/config_template.json
@@ -1,10 +1,10 @@
 {
 	"edgar_crawler": {
-		"start_year": 2020,
+		"start_year": 2025,
 		"end_year": 2025,
 		"quarters": [1, 2, 3, 4],
 		"filing_types": ["10-K"],
-		"cik_tickers": [],
+		"cik_tickers": ["0000789019"],
 		"user_agent": "Lucas (lgubm23@gmail.com)",
 		"raw_filings_folder": "raw_filings",
 		"indices_folder": "indices",
